Bug 264278 - [JSC] Fix addImmediateShouldSpeculateInt32 for case int32 + constant double
Summary: [JSC] Fix addImmediateShouldSpeculateInt32 for case int32 + constant double
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: JavaScriptCore (show other bugs)
Version: WebKit Nightly Build
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: Yijia Huang
URL:
Keywords: InRadar
: CVE-2024-23252 (view as bug list)
Depends on:
Blocks:
 
Reported: 2023-11-06 12:26 PST by Yijia Huang
Modified: 2024-03-19 09:14 PDT (History)
2 users (show)

See Also:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Yijia Huang 2023-11-06 12:26:52 PST
...
Comment 1 Yijia Huang 2023-11-06 12:28:46 PST
<rdar://117563215>
Comment 2 Yijia Huang 2023-11-06 12:29:58 PST
Pull request: https://github.com/WebKit/WebKit/pull/20052
Comment 3 EWS 2023-11-09 14:26:54 PST
Committed 270481@main (79a659d55c63): <https://commits.webkit.org/270481@main>

Reviewed commits have been landed. Closing PR #20052 and removing active labels.
Comment 4 Mark Lam 2024-03-19 09:14:30 PDT
*** Bug 263758 has been marked as a duplicate of this bug. ***